modificações na lógica da classe!